force-app/main/default/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>담당자의 소속 부서(예: 재경팀). 직책(Title)과 분리해 관리하며, 리드 전환 시 LeadConvertService가 표준 Contact.Department 필드로 이관한다.</description>
    <inlineHelpText>직책은 Title에, 소속 부서만 여기에 입력하세요 (예: 재경팀).</inlineHelpText>
    <label>부서</label>
    <length>80</length>
    <type>Text</type>
</CustomField>