force-app/main/default/objects/Lead/fields/Meeting_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Attendees__c</fullName>
    <description>리드 전환 전에 입력하는 미팅 참석자(자유 텍스트, 쉼표 구분). 전환 시 Meeting_Note__c.Attendees__c로 복사된다.</description>
    <inlineHelpText>참석자를 쉼표로 구분해 입력하세요 (예: 임서우, 홍길동).</inlineHelpText>
    <label>미팅 참석자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>