force-app/main/default/objects/Lead/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <description>리드 전환 전에 입력하는 미팅 날짜. 전환 시 자동 생성되는 Meeting_Note__c.Meeting_Date__c, 전환된 영업기회의 CloseDate, 후속 Task의 기한에 동일하게 매핑된다(Lead_Convert_Create_Meeting_Note Flow).</description>
    <inlineHelpText>이 리드를 전환하면 이 날짜로 미팅 기록·후속 Task가 생성되고 영업기회 종료일이 설정됩니다.</inlineHelpText>
    <label>미팅 날짜</label>
    <type>Date</type>
</CustomField>