force-app/main/default/objects/Lead/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <description>발굴 단계 Lead의 우선순위 점수. 외부 데이터 및 우선순위 규칙(E2)에 따라 산출되는 0~100 범위(소수 1자리) 점수로, RM이 발굴 대상의 접근 순위를 판단하는 데 사용한다. PriorityScoreBatch가 항목별 연속 채점으로 재계산한다.</description>
    <inlineHelpText>0에서 100 사이의 우선순위 점수입니다(소수 1자리). 점수가 높을수록 우선 발굴 대상입니다.</inlineHelpText>
    <label>우선순위 점수</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>